few more changes in the employee api
