# oas/employee.yml
@@ -218,6 +218,10 @@ paths:
                 - lastName
                 - email
                 - hireDate
+                - startDate
+                - jobId
+                - departmentId
+                - salary
       responses:
         '201':
           description: Employee created
@@ -266,6 +270,15 @@ paths:
                   items:
                     type: string
                     format: binary
+              required:
+                - firstName
+                - lastName
+                - email
+                - hireDate
+                - startDate
+                - jobId
+                - departmentId
+                - salary
       responses:
         '201':
           description: Employee created with documents
@@ -532,6 +545,9 @@ components:
         hireDate:
           type: string
           format: date
+        startDate:
+          type: string
+          format: date
         salary:
           type: number
           format: float
@@ -554,6 +570,10 @@ components:
         - lastName
         - email
         - hireDate
+        - startDate
+        - jobId
+        - departmentId
+        - salary
     EmployeeResponse:
       type: object
       properties:
